test/test_examples/syntactic_examples/syntax_error/error_fun_def_14.zig
// Syntax error: comma in brackets

const ifj = @import("ifj24.zig"); 

pub fn foo(,) void {

}  